-added 3 more test cases