@@ -8,6 +8,7 @@ import com.brilliantminds.foodordering.order.service.business.valueobject.Street
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 public class Order extends AggregateRoot<OrderId> {
     private final CustomerId customerId;
@@ -100,7 +101,7 @@ public class Order extends AggregateRoot<OrderId> {
 
     private void updateFailureMessage(List<String> failureMessages) {
         if (this.failureMessages != null && failureMessages != null) {
-            this.failureMessages.addAll(failureMessages.stream().filter(message -> !message.isEmpty()).toList());
+            this.failureMessages.addAll(failureMessages.stream().filter(message -> !message.isEmpty()).collect(Collectors.toList()));
         }
         if (this.failureMessages == null) {
             this.failureMessages = failureMessages;
